feat(Commit Changes): Added main features

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changelog-generator",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "description": "Changelog Generator Github Action",
   "author": {
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@actions/github": "^4.0.0"
+    "@actions/github": "^4.0.0",
+    "simple-git": "^2.21.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
