--- a/action.yml
+++ b/action.yml
@@ -13,14 +13,9 @@ inputs:
     description: 'Exclude selected commit types (comma separated)'
     required: false
     default: ''
-  generate:
-    description: 'Set to true if a CHANGELOG.md is to be generated/updated'
+  file:
+    description: 'Specify the path of a change log file for creating or updating; omit to not update any file'
     required: false
-    default: false
-  path:
-    description: 'Specify the path of the change log filefor updating if generate is set to true'
-    required: false
-    default: './CHANGELOG.md'
   title:
     description: 'Specify the markdown text to use as the file heading'
     required: false
