--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm run all
       - run: |
           CURRENT_DATE=$(date +%Y-%m-%d)
-          echo ::set-output name=heading::## [Release $RELEASE](https://github.com/danpetitt/changelog-file-generator/releases/tag/$RELEASE) ($CURRENT_DATE)
+          echo ::set-output name=heading::## [Release $RELEASE]\(https://github.com/danpetitt/changelog-file-generator/releases/tag/$RELEASE\) \($CURRENT_DATE\)
         id: release_heading
 
       - id: changelog
