--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
           section: ${{ steps.release_heading.outputs.heading }}
           files_to_commit: './CHANGELOG.md'
           commit_message: 'chore(pipeline updates): [skip ci]'
+          author_name: 'GitHub CI'
+          author_email: 'danp@coderanger.com'
 
       - name: Create Release
         id: create_release
