--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint src",
     "build": "tsc",
     "watch": "npm run build -- --watch",
-    "all": "npm run format && npm run lint && npm run build",
+    "package": "ncc build --out action --minify --source-map --license licenses.txt",
+    "all": "npm run format && npm run lint && npm run build && npm run package",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
