--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,13 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     env:
-      RELEASE: ${{ github.ref }}
+      TAGREF: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
       - run: npm run all
       - run: |
+          RELEASE=$(echo $TAGREF| cut -d'/' -f 3)
           CURRENT_DATE=$(date +%Y-%m-%d)
           echo ::set-output name=heading::## [Release $RELEASE]\(https://github.com/danpetitt/changelog-file-generator/releases/tag/$RELEASE\) \($CURRENT_DATE\)
         id: release_heading
@@ -25,12 +26,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file: './CHANGELOG.md'
-          title: '# Changelog Generator'
+          title: '# Changelog File Generator Github Action'
           section: ${{ steps.release_heading.outputs.heading }}
           files_to_commit: './CHANGELOG.md'
           commit_message: 'chore(pipeline updates): [skip ci]'
           author_name: 'GitHub CI'
-          author_email: 'danp@coderanger.com'
+          author_email: 'actions@github.com'
 
       - name: Create Release
         id: create_release
