--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,11 +49,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file: './CHANGELOG.md'
-          title: '# ChangeLog for Auto Changelog Github Action'
           section: ${{ steps.heading_step.outputs.heading }}
-      - run: cat ./CHANGELOG.md | grep -q '# ChangeLog for Auto Changelog Github Action' ; echo $?
-      - run: cat ./CHANGELOG.md | grep -q '## Release - ' ; echo $?
       - run: cat ./CHANGELOG.md
+      - run: cat ./CHANGELOG.md | grep -q '# changelog-file-generator' ; echo $?
+      - run: cat ./CHANGELOG.md | grep -q '## Release - ' ; echo $?
 
   test-updating-existing-changelog-file:
     runs-on: ubuntu-latest
@@ -61,7 +60,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci
       - run: npm run all
-      - run: printf '# ChangeLog for Auto Changelog Github Action\n\n' | tee ./CHANGELOG.md
+      - run: |
+          printf '# ChangeLog for Auto Changelog Github Action\n\nSome sample text before we get to main release notes.\n\n' | tee ./CHANGELOG.md
       - run: |
           CURRENT_DATE=$(date +%Y-%m-%d)
           echo ::set-output name=heading::## Release - $CURRENT_DATE
@@ -70,8 +70,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file: './CHANGELOG.md'
-          title: '# ChangeLog for Auto Changelog Github Action'
           section: ${{ steps.heading_step.outputs.heading }}
+      - run: cat ./CHANGELOG.md
       - run: cat ./CHANGELOG.md | grep -q '# ChangeLog for Auto Changelog Github Action' ; echo $?
       - run: cat ./CHANGELOG.md | grep -q '## Release - ' ; echo $?
-      - run: cat ./CHANGELOG.md
