--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changelog-file-generator",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "description": "Changelog File Generator Github Action",
   "author": {
@@ -35,7 +35,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
-    "simple-git": "^2.19.0"
+    "octokit-commit-multiple-files": "^3.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
