--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          release_version: 1.1.4
+          release_version: v1.1.4
 
   test-with-exclude: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
@@ -34,7 +34,7 @@ jobs:
       - uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          release_version: 1.1.4
+          release_version: v1.1.4
           exclude: 'chore,ci,build'
 
   test-generating-new-changelog-file:
@@ -52,7 +52,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file: ./CHANGELOG.md
-          release_version: 1.1.4
+          release_version: v1.1.4
       - run: cat ./CHANGELOG.md
       - run: cat ./CHANGELOG.md | grep -q '# changelog-file-generator' ; echo $?
       - run: cat ./CHANGELOG.md | grep -q '${{ steps.heading_step.outputs.expected_heading }}' ; echo $?
@@ -72,7 +72,7 @@ jobs:
       - uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          release_version: 1.1.4
+          release_version: v1.1.4
           file: ./CHANGELOG.md
       - run: cat ./CHANGELOG.md
       - run: cat ./CHANGELOG.md | grep -q '# ChangeLog for Auto Changelog Github Action' ; echo $?
