--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
+    "@octokit/auth-token": "^2.5.0",
+    "@octokit/rest": "^18.12.0",
     "octokit-commit-multiple-files": "^3.2.1"
   },
   "devDependencies": {
